samples/_failures_safe/1761469904_71a955_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcd1c41e.c: In function ‘main’:
./samples/SAFE/__tmp_dcd1c41e.c:163:9: error: expected expression at end of input
  163 |         free_blocks(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_dcd1c41e.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dcd1c41e.c:163:9: error: expected declaration or statement at end of input
